podspecs/namepsaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-dev
