podspecs/user-java-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-java-deployment
    labels:
        app: user-java
spec:
    replicas: 3
    selector:
        matchLabels:
          app: user-java
    template:
        metadata: 
            labels: 
                app: user-java
        spec:
            containers:
            -   image: registrymsd2910.azurecr.io/tripinsights/user-java:1.0
                name: user-java
                ports:
                - containerPort: 80
            imagePullSecrets:
            - name: regcred
