podspecs/poi-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: poi-deployment
    namespace: api-dev
    labels:
        app: poi
spec:
    replicas: 3
    selector:
        matchLabels:
          app: poi 
    template:
        metadata: 
            labels: 
                app: poi
        spec:
            containers:
            -   image: registrymsd2910.azurecr.io/tripinsights/poi:1.0
                name: poi-api
                ports:
                - containerPort: 80
                  name: poi-web-svc
                volumeMounts:
                  - name: secrets-store01-inline
                    mountPath: "/mnt/secrets-store"
                    readOnly: true
            imagePullSecrets:
            - name: regcred
            volumes:
            - name: secrets-store01-inline
              csi:
                driver: secrets-store.csi.k8s.io
                readOnly: true
                volumeAttributes:
                    secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api-dev
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: poi-web-svc
