podspecs/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: trips-deployment
    namespace: api-dev
    labels:
      app: trips
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips 
    spec:
      containers:
      - image: registrymsd2910.azurecr.io/tripinsights/trips:1.0
        name: trips
        ports:
        - containerPort: 80
          name: trips-web-svc
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: secrets-store01-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api-dev
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
