podspecs/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tripviewer-deployment
    namespace: web-dev
    labels:
        app: tripviewer
spec:
    replicas: 3
    selector:
        matchLabels:
          app: tripviewer
    template:
        metadata: 
            labels: 
                app: tripviewer 
        spec:
            containers:
            -   image: registrymsd2910.azurecr.io/tripinsights/tripviewer:1.0
                name: tripviewer
                ports:
                - containerPort: 80
                  name: tv-web-svc
            imagePullSecrets:
            - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
  namespace: web-dev
spec:
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
