podspecs/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: userprofile-deployment
    labels:
      app: userprofile
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      imagePullSecrets: 
      - name: regcred
      containers:
      - image: registrymsd2910.azurecr.io/tripinsights/userprofile:1.0
        name: userprofile
        ports:
        - containerPort: 80
          name: profile-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
